--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -11,80 +11,58 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # --------------------------------------------------
-    # 1. Checkout code
-    # --------------------------------------------------
+    # ----------------------------
+    # Checkout code
+    # ----------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --------------------------------------------------
-    # 2. Set up Python
-    # --------------------------------------------------
+    # ----------------------------
+    # Setup Python with pip cache
+    # ----------------------------
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.10"
+        cache: "pip"
 
-    # --------------------------------------------------
-    # 3. Cache pip dependencies (NEW)
-    # --------------------------------------------------
-    - name: Cache pip dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    # --------------------------------------------------
-    # 4. Install dependencies
-    # --------------------------------------------------
+    # ----------------------------
+    # Install dependencies
+    # ----------------------------
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install httpx pytest-asyncio python-dotenv
 
-    # --------------------------------------------------
-    # 5. Lint code
-    # --------------------------------------------------
+    # ----------------------------
+    # Lint
+    # ----------------------------
     - name: Lint code
       run: |
         pip install flake8
         flake8 src --max-line-length=100
 
-    # --------------------------------------------------
-    # 6. Run unit + integration tests
-    # --------------------------------------------------
-    - name: Run unit tests
+    # ----------------------------
+    # Run unit & integration tests
+    # Skip Docker smoke tests
+    # ----------------------------
+    - name: Run tests
       run: |
-        python -m pytest -v
+        pytest -v -m "not slow"
 
-    # --------------------------------------------------
-    # 7. Train model
-    # --------------------------------------------------
+    # ----------------------------
+    # Train model
+    # ----------------------------
     - name: Train model
       run: |
         python src/models/train_rf_with_pipeline.py
 
-    # --------------------------------------------------
-    # 8. Upload trained model as CI artifact
-    # --------------------------------------------------
+    # ----------------------------
+    # Upload trained model
+    # ----------------------------
     - name: Upload trained model artifact
       uses: actions/upload-artifact@v4
       with:
         name: trained-model
         path: models/random_forest_pipeline.pkl
-
-    # --------------------------------------------------
-    # 9. Upload model to GitHub Releases (NEW – ADVANCED)
-    # --------------------------------------------------
-    - name: Upload model to GitHub Release
-      if: github.ref == 'refs/heads/main'
-      uses: softprops/action-gh-release@v2
-      with:
-        files: models/random_forest_pipeline.pkl
-        tag_name: model-${{ github.run_number }}
-        name: Model Release ${{ github.run_number }}
-        body: |
-          Automated model release from CI pipeline.
-          Commit: ${{ github.sha }}
