--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
-kind: Service
+apiVersion: v1                           # Kubernetes API version for Service resources
+kind: Service                            # Declares this resource as a Service
 metadata:
-  name: heart-disease-api-service
+  name: heart-disease-api-service        # Name of the Service used by Ingress and other resources
 spec:
-  type: LoadBalancer
   selector:
-    app: heart-disease-api
+    app: heart-disease-api               # Selects pods with this label to route traffic to
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
+    - protocol: TCP                      # Network protocol used for communication
+      port: 80                           # Port exposed by the Service inside the cluster
+      targetPort: 8000                   # Port on the container where the app is running
+  type: ClusterIP                        # Service is only accessible within the cluster
