--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,12 +1,12 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 15s                  # Frequency at which Prometheus scrapes metrics from targets
 
 rule_files:
-  - alerts.yml
+  - alerts.yml                          # File containing alerting rules to be loaded by Prometheus
 
 scrape_configs:
-  - job_name: "heart-disease-api"
-    metrics_path: /metrics
+  - job_name: "heart-disease-api"       # Name of the scrape job for the Heart Disease API
+    metrics_path: /metrics              # HTTP endpoint exposed by the API for Prometheus metrics
     static_configs:
       - targets:
-          - heart-disease-api-service:8000
+          - heart-disease-api-service:8000  # Service DNS name and port inside Kubernetes cluster
