--- a/.github/workflows/mlops-ci.yml
+++ b/.github/workflows/mlops-ci.yml
@@ -1,68 +1,68 @@
-name: MLOps CI Pipeline
+name: MLOps CI Pipeline                     # Name of the GitHub Actions workflow shown in the Actions tab
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on:                                        # Defines the events that trigger this workflow
+  push:                                    # Trigger workflow on push events
+    branches: [ "main" ]                   # Only when code is pushed to the main branch
+  pull_request:                            # Trigger workflow on pull request events
+    branches: [ "main" ]                   # Only when PR targets the main branch
 
-jobs:
-  mlops-pipeline:
-    runs-on: ubuntu-latest
+jobs:                                      # Section defining all jobs in this workflow
+  mlops-pipeline:                          # Name of the job (can be any descriptive name)
+    runs-on: ubuntu-latest                 # Specifies the OS environment for the runner (latest Ubuntu)
 
-    steps:
+    steps:                                 # Sequence of steps executed in this job
     # ----------------------------
     # Checkout code
     # ----------------------------
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: Checkout repository             # Human-readable name for this step
+      uses: actions/checkout@v4            # GitHub Action to clone the repository into the runner
 
     # ----------------------------
     # Setup Python with pip cache
     # ----------------------------
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up Python                   # Step to configure Python environment
+      uses: actions/setup-python@v5        # Official GitHub Action to install Python
       with:
-        python-version: "3.10"
-        cache: "pip"
+        python-version: "3.10"              # Specifies Python version to be installed
+        cache: "pip"                        # Enables pip dependency caching for faster builds
 
     # ----------------------------
     # Install dependencies
     # ----------------------------
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install httpx pytest-asyncio python-dotenv
+    - name: Install dependencies            # Step to install project dependencies
+      run: |                                # Multi-line shell command execution
+        python -m pip install --upgrade pip # Upgrades pip to the latest version
+        pip install -r requirements.txt     # Installs all dependencies listed in requirements.txt
+        pip install httpx pytest-asyncio python-dotenv  # Installs additional testing and env packages
 
     # ----------------------------
     # Lint
     # ----------------------------
-    - name: Lint code
-      run: |
-        pip install flake8
-        flake8 src --max-line-length=100
+    - name: Lint code                       # Step to run code quality checks
+      run: |                                # Executes multiple shell commands
+        pip install flake8                  # Installs flake8 linter
+        flake8 src --max-line-length=100    # Runs flake8 on src folder with line length rule
 
     # ----------------------------
     # Run unit & integration tests
     # Skip Docker smoke tests
     # ----------------------------
-    - name: Run tests
-      run: |
-        pytest -v -m "not slow"
+    - name: Run tests                       # Step to execute automated tests
+      run: |                                # Executes pytest commands
+        pytest -v -m "not slow"             # Runs tests except those marked as slow
 
     # ----------------------------
     # Train model
     # ----------------------------
-    - name: Train model
-      run: |
-        python src/models/train_rf_with_pipeline.py
+    - name: Train model                     # Step responsible for training ML model
+      run: |                                # Executes Python training script
+        python src/models/train_rf_with_pipeline.py  # Runs Random Forest training pipeline
 
     # ----------------------------
     # Upload trained model
     # ----------------------------
-    - name: Upload trained model artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload trained model artifact   # Step to store trained model as a CI artifact
+      uses: actions/upload-artifact@v4      # GitHub Action to upload files from runner
       with:
-        name: trained-model
-        path: models/random_forest_pipeline.pkl
+        name: trained-model                 # Name of the artifact shown in GitHub Actions
+        path: models/random_forest_pipeline.pkl  # Path to the trained model file
